--- a/PA1/logistic_regression.ipynb
+++ b/PA1/logistic_regression.ipynb
@@ -25,16 +25,20 @@
     "class LogisticRegression():\n",
     "\n",
     "    def __init__(self, n_features=2):\n",
-    "        # be sure to use the right class_dict for each data set\n",
+    "\n",
+    "        # holds the class labels for each document\n",
     "        self.class_dict = {'neg': 0, 'pos': 1}\n",
-    "        # self.class_dict = {'action': 0, 'comedy': 1}\n",
+    "\n",
+    "        # Added this to hold the common words and bigrams for use in featurize\n",
     "        self.negatives, self.positives = self.generate_common_words(1000)\n",
     "        self.negative_bigrams, self.positive_bigrams = self.generate_common_bigrams(1000)\n",
     "\n",
+    "        # Added this to hold words that may indicate the conclusion of a review (e.g. \"in conclusion\", \"to summarize\", etc.)\n",
     "        self.conclusive_words = []\n",
-    "        # use of self.feature_dict is optional for this assignment\n",
+    "\n",
+    "        # self.feature_dict holds the index of each feature in my feature vector\n",
     "        self.feature_dict = {'num_pos_words': 0, 'num_neg_words': 1, 'num_pos_words_conclusion': 2, 'num_neg_words_conclusion': 3, 'num_pos_bigrams': 4, 'num_neg_bigrams': 5, 'num_pos_bigrams_conclusion': 6, 'num_neg_bigrams_conclusion': 7}\n",
-    "        # self.feature_dict = {'fast': 0, 'couple': 1, 'shoot': 2, 'fly': 3}\n",
+    "\n",
     "\n",
     "        self.n_features = n_features\n",
     "        self.theta = np.zeros(n_features + 1) # weights (and bias)\n",
@@ -63,18 +67,25 @@
     "                    # END STUDENT CODE\n",
     "        return filenames, classes, documents\n",
     "\n",
+    "    # BEGIN STUDENT CODE\n",
+    "    ''' \n",
+    "    This function finds the most common words in the training set and returns them as a list of strings\n",
+    "    It returns two lists, one for negative reviews and one for positive reviews\n",
+    "    '''\n",
     "    def generate_common_words(self, top_n_words, path=\"movie_reviews/train\"):\n",
+    "        # Initialize counters for negative and positive reviews to hold count of each word occurance\n",
+    "        # I cuold have made my own counter but this is easier\n",
     "        negative_counter, positive_counter = Counter(), Counter()\n",
     "\n",
-    "        # Iterate through negative reviews\n",
+    "        # Open and iterate through negative reviews adding words to the counter\n",
     "        for root, dirs, files in os.walk(os.path.join(path, \"neg\")):\n",
     "            for name in files:\n",
     "                with open(os.path.join(root, name), 'r') as f:\n",
-    "                    # Filter out words that are non-letter characters\n",
-    "                    words = [word for word in f.read().split() if word.isalpha()]\n",
-    "                    negative_counter.update(words)\n",
+    "                    # Filter out words that are non-letter characters (this helped a lot)\n",
+    "                    words = [word for word in f.read().split() if word.isalpha()] # this grabs the list of all words that are alphabetic\n",
+    "                    negative_counter.update(words)  # this sums the count of each word in the list\n",
     "\n",
-    "        # Iterate through positive reviews\n",
+    "        # Does the same as above but for positive reviews\n",
     "        for root, dirs, files in os.walk(os.path.join(path, \"pos\")):\n",
     "            for name in files:\n",
     "                with open(os.path.join(root, name), 'r') as f:\n",
@@ -83,27 +94,44 @@
     "                    positive_counter.update(words)\n",
     "\n",
     "        # Identify words that appear in both positive and negative reviews\n",
+    "        # I did this to remove words that are common to both positive and negative reviews\n",
+    "        # This way the words in the lists should be indicative of pos or neg\n",
     "        common_words = set(negative_counter.keys()).intersection(set(positive_counter.keys()))\n",
     "\n",
     "        # Remove common words from the counters\n",
     "        for word in common_words:\n",
-    "            del negative_counter[word]\n",
-    "            del positive_counter[word]\n",
+    "            del negative_counter[word]  \n",
+    "            del positive_counter[word]  \n",
     "\n",
     "        # Get top N words from each counter\n",
     "        negatives = [item[0] for item in negative_counter.most_common(top_n_words)]\n",
     "        positives = [item[0] for item in positive_counter.most_common(top_n_words)]\n",
     "\n",
     "        return negatives, positives\n",
+    "    # END STUDENT CODE\n",
+    "\n",
+    "    # BEGIN STUDENT CODE\n",
+    "    ''' \n",
+    "    This function finds the most common bigrams in the training set. I am trying to increase accuracy of the classifier.\n",
+    "    This is pretty much the same as above except \n",
+    "    '''\n",
     "\n",
     "    def generate_common_bigrams(self, top_n_bigrams, path=\"movie_reviews/train\"):\n",
     "        negative_counter, positive_counter = Counter(), Counter()\n",
     "\n",
     "        # Helper function to extract bigrams from a text\n",
     "        def extract_bigrams(text):\n",
+    "            # Split the text into words\n",
     "            words = text.split()\n",
+    "\n",
     "            # Only include bigrams where both words are alphabetic\n",
-    "            return [(words[i], words[i + 1]) for i in range(len(words) - 1) if words[i].isalpha() and words[i + 1].isalpha()]\n",
+    "            bigrams = []\n",
+    "            for i in range(len(words) - 1):\n",
+    "                word1 = words[i]\n",
+    "                word2 = words[i + 1]\n",
+    "                if word1.isalpha() and word2.isalpha():\n",
+    "                    bigrams.append((word1, word2))\n",
+    "            return bigrams\n",
     "\n",
     "        # Iterate through negative reviews\n",
     "        for root, dirs, files in os.walk(os.path.join(path, \"neg\")):\n",
@@ -128,10 +156,12 @@
     "            del positive_counter[bigram]\n",
     "\n",
     "        # Get top N bigrams from each counter\n",
-    "        negatives = [item[0] for item in negative_counter.most_common(top_n_bigrams)]\n",
-    "        positives = [item[0] for item in positive_counter.most_common(top_n_bigrams)]\n",
+    "        negative_bigrams = [item[0] for item in negative_counter.most_common(top_n_bigrams)]\n",
+    "        positive_bigrams = [item[0] for item in positive_counter.most_common(top_n_bigrams)]\n",
     "\n",
-    "        return negatives, positives\n",
+    "        return negative_bigrams, positive_bigrams\n",
+    "    # END STUDENT CODE\n",
+    "\n",
     "\n",
     "    '''\n",
     "    Given a document (as a list of words), returns a feature vector.\n",
@@ -339,11 +369,11 @@
     "if __name__ == '__main__':\n",
     "    lr = LogisticRegression(n_features=8)\n",
     "\n",
-    "    print('common negative words: ' + str(lr.negatives))\n",
-    "    print('common positive words: ' + str(lr.positives))\n",
+    "    # print('common negative words: ' + str(lr.negatives))\n",
+    "    # print('common positive words: ' + str(lr.positives))\n",
     "\n",
-    "    print('common negative bigrams: ' + str(lr.negative_bigrams))\n",
-    "    print('common positive bigrams: ' + str(lr.positive_bigrams))\n",
+    "    # print('common negative bigrams: ' + str(lr.negative_bigrams))\n",
+    "    # print('common positive bigrams: ' + str(lr.positive_bigrams))\n",
     "\n",
     "    # Painstakingly manually choose words from the top 100 that aren't proper nouns or super movie specific\n",
     "    # My positives list is longer...not sure if this matters yet\n",
